# RTGE

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
manualTests/: animated_camel.json  blinking_bob.json  enemy.json
src/: lib.rs  main.rs
src/controls/: direction.rs  inputs.rs  mod.rs
src/rendering/: animation.rs  entity.rs  frame.rs  mod.rs  position.rs  setup.rs  sprite.rs
src/rendering/tests/: wrong_json.json
