[package]
name = "rtge"
version = "0.1.1"
edition = "2021"
authors = ["jackcat13 <christophehenry11@gmail.com"]
description = "Rust Terminal Game Engine made with â™¥ï¸ in ðŸ¦€"
readme = "README.md"
repository = "https://github.com/jackcat13/RTGE"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "terminal", "rust"]
categories = ["command-line-utilities", "development-tools::library"]

[lib]
name = "rtge"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
futures-core = "0.3.28"
futures-timer = "3.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_init = "1.0.3"
tokio = { version = "1.30.0", features = ["full"] }
